// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exported function 1`] = `
"\\"use strict\\";

define(function (require) {
  var _exports = {};
  _exports.foo = foo;

  function foo(a, b) {
    return a + b;
  }

  return _exports;
});"
`;

exports[`main.js 1`] = `
"\\"use strict\\";

define(function (require) {
  var _exports = {};
  _exports.default = void 0;

  const Component = require('Component');

  var _default = Component.extend({
    onRendered: function () {
      console.log(this.state.name); // foo
    },
    // collect the information a component needs from the store
    // always return a new object
    filterState: function (state) {
      return _.extend({}, {
        name: state.name
      });
    }
  });

  _exports.default = _default;
  return _exports.default;
});"
`;

exports[`server module 1`] = `
"\\"use strict\\";

define(function (require) {
  var _exports = {};
  _exports.getPropertyFromCurrentPage = getPropertyFromCurrentPage;
  _exports.add = add;

  const portletContextUtil = require('PortletContextUtil');

  const properties = require('Properties');

  function getPropertyFromCurrentPage(prop) {
    return properties.get(portletContextUtil.getCurrentPage(), prop);
  }

  ;

  function add(a, b) {
    return a + b;
  }

  ;
  return _exports;
});"
`;
